@@ -1,0 +1,18 @@
+language: perl
+script: prove -lr t
+install:
+  - cpanm -n -q Test::More
+perl:
+  - "5.19"
+  - "5.18"
+  - "5.16"
+  - "5.14"
+  - "5.12"
+  - "5.10"
+  - "5.8"
+notifications:
+  irc:
+    channels:
+      - "irc.perl.org#yaml"
+    on_success: change
+    on_failure: always
